# meterreader

./: README.md  compose.yaml  main.py  models.py  monitor.py  pyproject.toml
config/grafana/dashboards/: meters.json
config/grafana/provisioning/dashboards/: dashboards.yaml
config/prometheus/: prometheus.yaml
image/meterreader/: Containerfile
image/rtlsdr/: Containerfile
tests/: test_models.py
