[project]
name = "meterreader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "prometheus-client>=0.23.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["I"]
